Using Docker to test database - under development

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,7 @@
 # files/directories to be ignored when creating a container
 node_modules
-test
-.gitignore
-.git
-.prettierrc
-Dockerfile
-README.md
+# .gitignore
+# .git
+# .prettierrc
+# Dockerfile
+# README.md
