--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,10 +19,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: dev
     ports:
       - 3000:3000
-    environment:
-      - NODE_ENV=development
     volumes:
       - ./src:/usr/src/app/src
     depends_on:
