Update the env example with comments and the proper data to run and seed the app

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,23 @@
+# PostgreSQL database information
+# -----------------------------------------------------------------------
+# This app uses PostgreSQL, if you use a different database (like MySQL),
+# then you'll need to edit the DATABASE_URL to meet your requirements
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_PORT=
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
+
+# Environment
+# -----------------------------------------------------------------------
+# The NODE_ENV currently is not used for anything outside of logging the
+# environment in the console when running the app.
+NODE_ENV=development
+
+# Seeds
+# -----------------------------------------------------------------------
+# The TEST_USER_PASSWORD is used for seeding the database with a test
+# user. You'll want to provide a hashed value here as this will be stored
+# in your database
+TEST_USER_PASSWORD=
