--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -30,6 +30,8 @@ services:
       DB_PORT: ${DB_PORT}
       DATABASE_URL: ${DATABASE_URL}
       TEST_USER_PASSWORD: ${TEST_USER_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      NODE_ENV: ${NODE_ENV}
     volumes:
       - ./src:/usr/src/app/src
     depends_on:
