Add JWT_SECRET to the env example

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,10 @@ NODE_ENV=development
 # user. You'll want to provide a hashed value here as this will be stored
 # in your database
 TEST_USER_PASSWORD=
+
+# Auth
+# -----------------------------------------------------------------------
+# The JWT_SECRET is required for authorization. This app uses JWT tokens
+# to authenticate and authorize users. Without this value, you cannot
+# login or validate users
+JWT_SECRET=
